tests/toy/neg/000487_mutation.toylang
program a = { a = do a; } .
